# tabpfn-extensions

./: CHANGELOG.md  pyproject.toml
.github/workflows/: release-publish.yml
src/tabpfn_extensions/: __init__.py
